--- a/docs/_posts/2022-11-05-new-post.md
+++ b/docs/_posts/2022-11-05-new-post.md
@@ -3,8 +3,9 @@ layout: post
 ---
 new post  
 
-![asset image](/assets/screenshot.png)  
-![local image](./2022-11-05-new-post/screenshot.png)
+![image](screenshot.png)  
+![image](/assets/images/screenshot.png)  
+![image]({{ site.baseurl }}/assets/images/screenshot.png)  
 
 
 
