--- a/docs/_posts/2022-11-05-new-post.md
+++ b/docs/_posts/2022-11-05-new-post.md
@@ -1,11 +1,13 @@
 ---
 layout: post
+title: this is page.title
+description: this is page.description
 ---
 new post  
 
-![image](screenshot.png)  
-![image](/assets/images/screenshot.png)  
-![image]({{ site.baseurl }}/assets/images/screenshot.png)  
+![image 1](screenshot.png)  
+![image 2](/assets/images/screenshot.png)  
+![image 3]({{ site.baseurl }}/assets/images/screenshot.png)  
 
 
 
